[GPMS-73] Create Login Page (#2)
* :wrench: turn off eslint rule multi-word-component-names

* :bento: update assets

* :mag: update favicon and title

* :sparkles: create sign-in page

* :wrench: update eslint configurations

* :monocle_face: validate sign-in-form

* :lipstick: replace custom class to quasar class

* :heavy_plus_sign: install axios

* :sparkles: add constants

* :sparkles: create axios client

* :passport_control: create auth related requests

* :passport_control: establish sign-in, sign-out

* :heavy_plus_sign: install vite-plugin-vue-i18n

* :sparkles: establish vue-i18n composables

* :adhesive_bandage: add vue-i18n plugin into vite

* :globe_with_meridians: work on i18n

* :art: make validation schema not computed

But if you want to change them to use i18n error messages, you need to set this as a computed ref.

* :bulb: add comments

* :heavy_plus_sign: install unit testing dependencies

* :heavy_minus_sign: uninstall happy-dom

The happy-dom dependecy is replaced to js-dom as happy-dom has a bug on using vue-i18n as a plugin.

* :adhesive_bandage: correct variable name

* :art: replace VueQueryProvider to VueQueryPlugin

* :wrench: configure unit test

* :hammer: add unit test script

* :adhesive_bandage: correct i18n key

* :test_tube: unit test sign-in-form

Failing. Need to set up mock api to pass the test.

* :heavy_plus_sign: install msw

* :speech_balloon: fix urls

* :goal_net: handle response errors

* :white_check_mark: unit test sign-in-form

* :globe_with_meridians: update i18n

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,1 +1,11 @@
-{ "hello": "hello" }
+{
+  "email": "Email",
+  "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "If you want to register GoPMS, please fill out the registration form on here.",
+  "password": "Password",
+  "sign_in": "Sign in",
+  "something_went_wrong": "Something went wrong...",
+  "support": "Support",
+  "welcome_to_gopms": "Welcome to GoPMS!",
+  "wrong_credentials": "Wrong Credentials",
+  "you_can_manage_all_properties_easily with_the_most_convenient_system": "You can manage all properties easily with the most convenient system."
+}
