[GPMS-74] Create Default Layout (#3)
* :sparkles: add gopms logos

* :lipstick: paint default layout

* :sparkles: create pages

* :sparkles: add buttons on the toolbar

* :coffin: clean codes

* :globe_with_meridians: add i18n

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,10 +1,27 @@
 {
+  "booking": "Booking | Bookings",
+  "booking_source": "Booking Source",
+  "create_new_booking": "Create New Booking",
   "email": "Email",
+  "guest": "Guest | Guests",
+  "home": "Home",
   "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "If you want to register GoPMS, please fill out the registration form on here.",
+  "information": "Information",
+  "my_account": "My Account",
   "password": "Password",
+  "policy": "Policy",
+  "rate_structure": "Rate Structure",
+  "report": "Report | Reports",
+  "room_setting": "Room Setting",
+  "room_view": "Room View",
+  "service": "Service",
+  "setting": "Setting | Settings",
   "sign_in": "Sign in",
+  "sign_out": "Sign out",
   "something_went_wrong": "Something went wrong...",
+  "staff": "Staff",
   "support": "Support",
+  "transaction": "Transaction | Transactions",
   "welcome_to_gopms": "Welcome to GoPMS!",
   "wrong_credentials": "Wrong Credentials",
   "you_can_manage_all_properties_easily with_the_most_convenient_system": "You can manage all properties easily with the most convenient system."
