--- a/locales/vi-VN.json
+++ b/locales/vi-VN.json
@@ -1,10 +1,27 @@
 {
+  "booking": "__missing__",
+  "booking_source": "__missing__",
+  "create_new_booking": "__missing__",
   "email": "__missing__",
+  "guest": "__missing__",
+  "home": "__missing__",
   "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "__missing__",
+  "information": "__missing__",
+  "my_account": "__missing__",
   "password": "__missing__",
+  "policy": "__missing__",
+  "rate_structure": "__missing__",
+  "report": "__missing__",
+  "room_setting": "__missing__",
+  "room_view": "__missing__",
+  "service": "__missing__",
+  "setting": "__missing__",
   "sign_in": "__missing__",
+  "sign_out": "__missing__",
   "something_went_wrong": "__missing__",
+  "staff": "__missing__",
   "support": "__missing__",
+  "transaction": "__missing__",
   "welcome_to_gopms": "__missing__",
   "wrong_credentials": "__missing__",
   "you_can_manage_all_properties_easily with_the_most_convenient_system": "__missing__"
