[GPMS-75] Create My Account Page (#4)
* :label: add regex for vn mobile number

* :label: add query keys

* :sparkles: create queries for me-form

* :sparkles: create mutation for me-form

* :sparkles: create mutation for change-password-form

* :sparkles: create me-form

* :sparkles: create change-password-form

* :sparkles: create /my-accout page

* :globe_with_meridians: add i18n

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,19 +1,31 @@
 {
+  "basic_info": "Basic Info",
   "booking": "Booking | Bookings",
   "booking_source": "Booking Source",
+  "change_password": "Change Password",
   "create_new_booking": "Create New Booking",
+  "current_password": "Current Password",
   "email": "Email",
+  "failed_to_save": "Failed to save",
+  "gender": "Gender",
   "guest": "Guest | Guests",
   "home": "Home",
   "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "If you want to register GoPMS, please fill out the registration form on here.",
   "information": "Information",
+  "mobile": "Mobile",
   "my_account": "My Account",
+  "name": "Name",
+  "new_password": "New Password",
   "password": "Password",
   "policy": "Policy",
   "rate_structure": "Rate Structure",
+  "re-enter_password": "Re-enter Password",
   "report": "Report | Reports",
+  "role": "Role",
   "room_setting": "Room Setting",
   "room_view": "Room View",
+  "save": "Save",
+  "saved": "Saved",
   "service": "Service",
   "setting": "Setting | Settings",
   "sign_in": "Sign in",
