--- a/locales/vi-VN.json
+++ b/locales/vi-VN.json
@@ -1,19 +1,31 @@
 {
+  "basic_info": "__missing__",
   "booking": "__missing__",
   "booking_source": "__missing__",
+  "change_password": "__missing__",
   "create_new_booking": "__missing__",
+  "current_password": "__missing__",
   "email": "__missing__",
+  "failed_to_save": "__missing__",
+  "gender": "__missing__",
   "guest": "__missing__",
   "home": "__missing__",
   "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "__missing__",
   "information": "__missing__",
+  "mobile": "__missing__",
   "my_account": "__missing__",
+  "name": "__missing__",
+  "new_password": "__missing__",
   "password": "__missing__",
   "policy": "__missing__",
   "rate_structure": "__missing__",
+  "re-enter_password": "__missing__",
   "report": "__missing__",
+  "role": "__missing__",
   "room_setting": "__missing__",
   "room_view": "__missing__",
+  "save": "__missing__",
+  "saved": "__missing__",
   "service": "__missing__",
   "setting": "__missing__",
   "sign_in": "__missing__",
