[GPMS-76] Create Room Settings Page (#5)
* :heavy_plus_sign: install @vueuse/core

* :label: update query keys

* :sparkles: create useNotify composable

* :sparkles: create queries

* :sparkles: create mutations

* :sparkles: create floor component

* :sparkles: create /setting/room-settings page

* :sparkles: create useEditable composable

* :art: use useEditable composable

* :lipstick: paint floor menu

* :sparkles: create new room type button

* :sparkles: create new floor button

* :sparkles: create filtering by code feature

* :sparkles: create useRoomTypeQuery

* :sparkles: create room-type-form

* :sparkles: create room type related mutations

* :sparkles: create room type page

* :sparkles: create room mutations

* :sparkles: create room query

* :sparkles: create room-form

* :sparkles: create room page

* :adhesive_bandage: fix logical AND to logical OR

* :globe_with_meridians: add i18n

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,28 +1,46 @@
 {
+  "add_new_room": "Add New Room",
+  "all": "All",
   "basic_info": "Basic Info",
   "booking": "Booking | Bookings",
   "booking_source": "Booking Source",
+  "cancel": "Cancel",
   "change_password": "Change Password",
   "create_new_booking": "Create New Booking",
   "current_password": "Current Password",
+  "delete_floor": "Delete Floor",
+  "edit_room": "Edit Room",
+  "edit_room_type": "Edit Room Type",
   "email": "Email",
   "failed_to_save": "Failed to save",
+  "floor": "Floor",
   "gender": "Gender",
   "guest": "Guest | Guests",
   "home": "Home",
   "if_you_want_to_register_gopms_please_fill_out_the_registration_form_on_here": "If you want to register GoPMS, please fill out the registration form on here.",
   "information": "Information",
+  "input_floor_name": "Input floor name",
   "mobile": "Mobile",
   "my_account": "My Account",
   "name": "Name",
+  "new_floor": "New Floor",
   "new_password": "New Password",
+  "new_room": "New Room",
+  "new_room_type": "New Room Type",
+  "number_of_adults": "Number of Adults",
+  "number_of_beds": "Number of Beds",
+  "number_of_children": "Number of Children",
   "password": "Password",
   "policy": "Policy",
   "rate_structure": "Rate Structure",
   "re-enter_password": "Re-enter Password",
   "report": "Report | Reports",
   "role": "Role",
+  "room_name": "Room Name",
   "room_setting": "Room Setting",
+  "room_type": "Room Type",
+  "room_type_code": "Room Type Code",
+  "room_type_name": "Room Type Name",
   "room_view": "Room View",
   "save": "Save",
   "saved": "Saved",
